[package]
name = "wheres_my_pi"
version = "0.2.0"
authors = ["llamicron <llamicron@gmail.com>"]
edition = "2018"
repository = "https://github.com/llamicron/wheres_my_pi"
documentation = "https://github.com/llamicron/wheres_my_pi"

[dependencies]
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
pnet = "0.22.0"
dirs = "2.0.2"

# Size optimizations
[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
