[package]
name = "wheres_my_pi"
version = "0.3.0"
authors = ["llamicron <llamicron@gmail.com>"]
edition = "2018"
repository = "https://github.com/llamicron/wheres_my_pi"
documentation = "https://github.com/llamicron/wheres_my_pi"
description = "A small utility to send your devices IP to a discord webhook"
license = "MIT"

[dependencies]
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
pnet = "0.29.0"
dirs = "4.0.0"

# Size optimizations
[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
